--- a/src/resources/assets/css/app.css
+++ b/src/resources/assets/css/app.css
@@ -1,24 +1,135 @@
+body {
+    font-family: Inter, sans-serif;
+    background-color: #ECF0F4;
+    margin: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100dvh;
+    color: #031e23;
+
+}
+
+.container {
+    background-color: #fff;
+    border-radius: 10px;
+    box-shadow: 0 0px 28px rgba(0, 0, 0, .08);
+    padding: 40px;
+    max-width: 400px;
+    text-align: center;
+    position: relative;
+}
+
+#title {
+    font-size: 26px;
+    font-weight: 900;
+    display: inline;
+    margin-bottom: 40px;
+
+    text-align: center;
+    color: #333;
+    /* margin-bottom: 26px; */
+}
+
+
+
+.qrcode {
+    margin: 20px 0;
+}
+
+.input-group {
+    display: flex;
+    align-items: center;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    padding: 5px;
+    margin-bottom: 6px;
+    max-width: 100%;
+    transition: box-shadow 0.3s, border-color 0.3s;
+}
+
+.input-group input {
+    border: none;
+    outline: none;
+    flex: 1;
+    padding: 10px;
+    font-size: 18px;
+}
+
+.input-group input:focus {
+    outline: none;
+}
+
+
+.material-symbols-outlined {
+    font-variation-settings:
+        'FILL' 0,
+        'wght' 400,
+        'GRAD' 0,
+        'opsz' 24;
+}
+
+.erro {
+    position: absolute;
+    color: red;
+    font-weight: 600
+}
+
+.text {
+    font-size: 14px;
+    margin-top: 30px;
+    display: block;
+    color: #333;
+    margin-left: 2px;
+    margin-bottom: 2px;
+}
+
+.back-login {
+    color: #6c757d;
+    position: absolute;
+    bottom: 14px;
+    right: 10px;
+}
+
+.back-login:hover {
+    color: #343a40;
+}
+
+.back-login:focus {
+    border-radius: 0.2rem;
+    outline-width: 2px;
+    outline-color: #dc3545;
+}
+
+.btn-position {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .button {
     display: flex;
     justify-content: center;
     align-items: center;
     width: 100%;
     height: 50px;
-    background-color: #1b00ff;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    background-color: #2563eb;
     color: white;
     border: none;
     border-radius: 10px;
     font-size: 16px;
     font-family: Inter, sans-serif;
     font-weight: 600;
-    cursor: pointer;
     position: relative;
     overflow: hidden;
     transition: width 0.5s ease, background-color 0.3s ease;
 }
 
 .button:hover {
-    background-color: #1502bd;
+    background-color: #3b82f6;
 }
 
 .button.sent {
@@ -47,6 +158,7 @@
     opacity: 1;
     animation: draw-check 0.5s ease forwards;
 }
+
 
 @keyframes draw-check {
     0% {
