--- a/src/resources/assets/css/app.css
+++ b/src/resources/assets/css/app.css
@@ -33,7 +33,7 @@ body {
 
 
 
-.qrcode {
+img {
     margin: 20px 0;
 }
 
@@ -60,6 +60,10 @@ body {
     outline: none;
 }
 
+.input-group:focus-within {
+    box-shadow: 0 0 10px rgba(59, 130, 246, 0.5);
+    border-color: #3b82f6;
+}
 
 .material-symbols-outlined {
     font-variation-settings:
