--- a/src/resources/assets/css/app.css
+++ b/src/resources/assets/css/app.css
@@ -145,6 +145,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-bottom: 9px;
     width: 0;
     height: 0;
     border-right: 6px solid white;
